Bugfix: domain block layout issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -212,7 +212,7 @@ a {
   font-weight: 600;
   margin: 1rem 0;
   outline: 0;
-  padding: 2rem 3rem;
+  padding: 2rem 4vw;
   text-align: center;
   text-transform: uppercase;
   white-space: nowrap;
@@ -276,6 +276,7 @@ a {
 @media screen and (min-width: 1024px) {
   .btn {
     font-size: 1.5rem;
+    padding: 2rem 5rem;
   }
 }
 
@@ -314,6 +315,7 @@ a {
   border: 0;
   flex-grow: 1;
   padding: 1.5rem 2rem;
+  width: 0;
 }
 
 /***** Cards *****/
@@ -742,6 +744,7 @@ a {
 }
 
 .block-domain__prices {
+  color: var(--color-headings);
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(2, 6rem);
@@ -755,6 +758,12 @@ a {
 @media screen and (min-width: 768px) {
   .block-domain__prices {
     grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
+  }
+}
+
+@media screen and (max-width: 365px) {
+  .block-domain__prices {
+    grid-template-columns: repeat(2, 1fr);
   }
 }
 
